--- a/styles.css
+++ b/styles.css
@@ -195,3 +195,8 @@ body{
 .resume .resume_right .resume_hobby ul li:last-child:before {
     display: none;
 }
+.resume-icon-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
